[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Bullet/BulletTrace.png" type="Texture" id=1]
[ext_resource path="res://Code/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5, 1.75 )

[node name="Bullet" type="RigidBody2D"]
script = ExtResource( 2 )

[node name="BulletCollision" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 1.25 )
rotation = 3.13985
scale = Vector2( 1, 1 )
shape = SubResource( 1 )

[node name="BulletSprite" type="Sprite" parent="."]
position = Vector2( 1.50001, 0.749999 )
rotation = 3.13985
scale = Vector2( 0.0891089, 1.5 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="BulletCollision2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.5, 1.25 )
rotation = 3.13985
shape = SubResource( 1 )

[node name="QueTim" type="Timer" parent="."]
wait_time = 0.1

[node name="quick" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="QueTim" to="." method="_on_QueTim_timeout"]
[connection signal="timeout" from="quick" to="." method="_on_quick_timeout"]
